fix: answerInput wrong size regard to parent

--- a/client/src/components/bandeja/Template.css
+++ b/client/src/components/bandeja/Template.css
@@ -127,6 +127,7 @@
     font-size: 14px !important;
     background: transparent;
     min-width: 100%;
+    max-height: 60px;
 }
 
 .template-input-answer-placeholder{
